<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="Customer"
            type="com.example.bankingapp.db.Customer" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:background="@color/teal_200"
        tools:context="com.example.bankingapp.details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:elevation="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:text="@string/customer_name"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/customerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@{Customer.name}"
                tools:text="Customer Name"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:text="@string/customer_email"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/customerEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@{Customer.email}"
                tools:text="Customer Email"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:text="@string/customer_balance"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/customerBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                loadBalance="@{Customer.balance}"
                tools:text="Customer Balance"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:layout_marginTop="70dp"
            android:id="@+id/doTransactionBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700"
            android:textColor="@color/black"
            android:text="@string/do_transaction"
            />
    </LinearLayout>
</layout>